Update and rename index.Rmd to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: "Kiwi"
 author: "rjd712"
 date: "12/15/2020"
-output: html_document
+output: rmarkdown::github_document
 runtime: shiny
 ---
 
